--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,20 +2,44 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: arial;
 }
+
 * {
   box-sizing: border-box;
 }
+
+a {
+  color: #ee6123;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 header {
   padding: 30px;
 }
+
+header #logo {
+  height: 50px;
+}
+
+footer {
+  text-align: center;
+  padding: 30px;
+  font-size: 0.9em;
+}
+
+footer #logo {
+  height: 35px;
+  margin: 10px;
+}
+
 h1 {
   color: white;
-  text-transform: uppercase;
   text-align: center;
-  font-size: 2.9em;
+  text-transform: uppercase;
   font-weight: 400;
+  font-size: 2.9em;
   margin-bottom: 10px;
 }
 
@@ -23,6 +47,13 @@ h2 {
   color: white;
   text-align: center;
   font-weight: 500;
+}
+
+h3 {
+  margin: 0;
+  color: #ee6123;
+  text-transform: uppercase;
+  padding-bottom: 30px;
 }
 
 input[type="url"] {
@@ -36,15 +67,15 @@ input[type="url"] {
 
 input[type="submit"] {
   cursor: pointer;
-  border-radius: 3px;
   padding: 17px 30px;
+  font-size: 1.3em;
   border: none;
-  background-color: #ee6123;
+  border-radius: 3px;
+  background: #ee6123;
   color: white;
   text-transform: uppercase;
-  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.4);
   font-weight: 700;
-  font-size: 1.3em;
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.4);
 }
 
 #hello {
@@ -58,13 +89,13 @@ input[type="submit"] {
   margin-top: 30px;
 }
 
-#logo {
-  height: 50px;
-}
-
-#logo2 {
-  margin: 10px;
-  height: 35px;
+#result {
+  color: white;
+  margin: 20px;
+  padding: 30px;
+  border: 1px solid white;
+  border-radius: 10px;
+  display: inline-block;
 }
 
 #brands {
@@ -73,16 +104,8 @@ input[type="submit"] {
   text-align: center;
 }
 
-#footer {
+.center {
   text-align: center;
-  padding: 30px;
-  font-size: 0.9em;
-}
-
-#footer a {
-  color: #ee6123;
-  text-decoration: none;
-  font-weight: bold;
 }
 
 .container {
@@ -90,15 +113,7 @@ input[type="submit"] {
   margin: 0 auto;
 }
 
-.container h3 {
-  margin: 0;
-  color: #ee6123;
-  text-transform: uppercase;
-  padding-bottom: 30px;
-}
-
 .picture {
   height: 35px;
   margin: 15px;
-  cursor: pointer;
 }
